# image-splitter

./: .gitignore  README.md  image.raw.xmp  image_splitter.py  metadata_pb2.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml  update_version.yml
image_splitter/: cli.py
tests/: test_cli.py  test_core.py
