[project]
name = "image-splitter"
version = "1.0.0"
description = "Split satellite DTP binary data into metadata, raw image, and preview"
authors = [{ name="Bergur Davidsen" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pillow",
    "protobuf",
]

[project.scripts]
image-splitter = "image_splitter.cli:main"
