[project]
name = "image-splitter"
version = "1.0.0"
description = "Split satellite DTP binary data into metadata, raw image, and preview"
authors = [{ name="Bergur Davidsen" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pillow",
    "protobuf",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
]
dev = [
    "python-semantic-release>=10.5.2"
]


[tool.semantic_release]
version_variable = "image_splitter/__init__.py:__version__"

[project.scripts]
image-splitter = "image_splitter.cli:main"
